--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
         <div class="feature-card">
             <div class="feature-icon">🛡️</div>
             <h3>Privacy First</h3>
-            <p>Built-in ad blocking and tracking protection keeps your data safe and your browsing uninterrupted.</p>
+            <p>Everything you do on here is for you to see and use only. No info is collected.</p>
         </div>
         <div class="feature-card">
             <div class="feature-icon">🎨</div>
             <h3>Custom Themes</h3>
-            <p>Unlock Gold, RGB, and Retro modes. Make the browser truly yours with deep customization.</p>
+            <p>Unlock a multitude of themes with more customization features always on the horizon.</p>
         </div>
         <div class="feature-card">
             <div class="feature-icon">⚡</div>
@@ -211,6 +211,7 @@
 
     <footer>
         <p>&copy; 2025 DABROWSER Project. All rights reserved.</p>
+         <p>&copy; Trust ME with YOUR browsing.</p>
     </footer>
 
 </body>
