--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="hero">
         <h1>Trust ME with <br> YOUR browsing</h1>
         <p class="subtitle">Experience the next generation of web browsing. Built for speed, designed for aesthetics, and crafted for privacy.</p>
-        <a href="https://github.com/69DABLUI69" class="btn-download">Download Beta</a>
+        <a href="https://github.com/69DABLUI69/DABROWSER-Updates" class="btn-download">Download Beta</a>
     </div>
 
     <div class="features" id="features">
