--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="nav-links">
             <a href="#">Home</a>
             <a href="#features">Features</a>
-            <a href="https://github.com/69DABLUI69" target="_blank">GitHub</a>
+            <a href="https://github.com/69DABLUI69/DABROWSER-Updates" target="_blank">GitHub</a>
         </div>
     </nav>
 
@@ -211,7 +211,7 @@
 
     <footer>
         <p>&copy; 2025 DABROWSER Project. All rights reserved.</p>
-         <p>&copy; Trust ME with YOUR browsing.</p>
+         <p>Trust ME with YOUR browsing.</p>
     </footer>
 
 </body>
